Bug 1748061 - Make line-breaking behavior of fullwidth compatibility characters more compatible with UAX#14 and other browsers. r=platform-i18n-reviewers,gregtatum

Differential Revision: https://phabricator.services.mozilla.com/D136216